2009-02-27  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strsplit.m: Check also nargin.

2009-02-26  John W. Eaton  <jwe@octave.org>

	* deprecated/split.m: Add warning, not about version.

2009-02-26  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strsplit.m: New function.
	* strings/split.m: Move to deprecated/.
	* strings/Makefile.in: Update.
	* deprecated/Makefile.in: Update.

	* general/int2str.m: Use strsplit instead of split.
	* general/num2str.m: Ditto.
	* help/__makeinfo__.m: Ditto.
	* help/lookfor.m: Ditto.
	* miscellaneous/compare_versions.m: Ditto.
	* miscellaneous/tar.m: Ditto.
	* miscellaneous/unpack.m: Ditto.
	* miscellaneous/what.m: Ditto.
	* miscellaneous/zip.m: Ditto.
	* pkg/pkg.m: Ditto.
	* strings/strtok.m: Ditto.
	* testfun/rundemos.m: Ditto.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* Makefile.in (distclean maintainer-clean): Remove tags and TAGS
	in distclean target.

2009-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* help/lookfor.m: Vectorize the path splitting using mat2cell.
	Extract new path elements using setdiff.

2009-02-25  John W. Eaton  <jwe@octave.org>

	* plot/pie.m: Use numel to check sizes of X and LABELS instead of
	using size_equal.  From Andy Buckle <andybuckle@gmail.com>.

	* help/lookfor.m: Split original path into cell array and compare
	elements with strcmp.  Suppress warnings and errors when getting
	help text from function files.

2009-02-24  John W. Eaton  <jwe@octave.org>

	* help/gen_doc_cache.m: Don't compress output file.  By default,
	write to DOC, not DOC.gz.  Don't save empty cache.

	* help/lookfor.m: Use doc_cache_file to get location of DOC file.

2009-02-24  Jason Riedy  <jason@acm.org>

	* pkg/pkg.m (generate_lookfor_cache): Generate a DOC file for each
	directory.

	* help/gen_doc_cache.m: Call __makeinfo__, not makeinfo.

2009-02-24  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Update niter after each iteration, not just
	a succesful one.
